--- a/crypo_wallet/Gemfile
+++ b/crypo_wallet/Gemfile
@@ -2,7 +2,6 @@ source 'https://rubygems.org'
 git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
 ruby '2.6.5'
-
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 6.0.1'
 # Use sqlite3 as the database for Active Record
@@ -30,6 +29,7 @@ gem 'bootsnap', '>= 1.4.2', require: false
 
 gem 'pry-rails'
 gem 'tty-spinner'
+gem 'coffee-rails'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
