--- a/crypo_wallet/Gemfile
+++ b/crypo_wallet/Gemfile
@@ -52,5 +52,10 @@ group :test do
   # Easy installation and use of web drivers to run system tests with browsers
   gem 'webdrivers'
 end
+group :production do
+  # Use sqlite3 as the database for Active Record
+  gem 'pg'
+
+end
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
