--- a/crypo_wallet/Gemfile
+++ b/crypo_wallet/Gemfile
@@ -53,7 +53,7 @@ group :test do
   gem 'webdrivers'
 end
 group :production do
-  # Use sqlite3 as the database for Active Record
+  # Use Postgresql as the database for Active Record
   gem 'pg'
 
 end
