--- a/crypo_wallet/Gemfile
+++ b/crypo_wallet/Gemfile
@@ -28,6 +28,7 @@ gem 'bootsnap', '>= 1.4.2', require: false
 gem 'pry-rails'
 gem 'tty-spinner'
 gem 'coffee-rails'
+gem 'rails-i18n'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
